--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     <br><br>
 <header>
   <article class="launch" ><span style="color:hsl(0, 0%, 59%);">We are launching</span> <span style="font-weight:bold">soon!</span></article>
-  <br>
+  
   <p>Subscribe and get notified</p>
 </header>
 <br>
 <form name="form1" class="form-inline">
   <div class="form-group mx-sm-3 mb-2">
     <!-- <label for="inputPassword2" class="sr-only">Password</label> -->
-    <input name="input1" type="email" class="form-control" id="inputPassword2" placeholder="Enter your email address">
+    <input name="input1" type="email" class="form-control" id="inputEmail" placeholder="Enter your email address">
   </div>
-  <p class="error-msg"></p>
   <button type="submit" class="btn btn-primary mb-2">Notify Me</button>
+  <p class="error-msg"></p>
 </form>
   <div>
     <img src="./images/illustration-dashboard.png" alt="dashboard" class="img">
@@ -61,6 +61,6 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<script src="app.js" type="text/javascript"></script>
+<script src="app.js"></script>
 </body>
 </html>
